# jitorm

./: LICENSE  README.md  pyproject.toml
documentation/: mkdocs.yml
documentation/docs/: index.md
documentation/site/: 404.html  index.html  sitemap.xml
documentation/site/search/: search_index.json
example/: crud.py  main.py
jitorm/connection/: mysql.py  psql.py  sqlite.py
jitorm/models/: model.py
jitorm/orm/: query.py  session.py
jitorm/orm/jit/: __init__.py  mapping.py
